feature: 整理并提交剩余改动（SOP治理与链路收敛）